--- a/BJ.App/BJ.App.csproj
+++ b/BJ.App/BJ.App.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\BoostJuice\js\jquery.validate.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\BoostJuice\js\jquery.validate.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\BoostJuice\js\jquery.validate.js" />
     <None Include="wwwroot\js\site.js" />
   </ItemGroup>
 
@@ -14,6 +23,7 @@
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="LazZiya.ExpressLocalization" Version="4.0.4" />
     <PackageReference Include="LazZiya.TagHelpers" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
   </ItemGroup>
 
