--- a/BJ.App/appsettings.Production.json
+++ b/BJ.App/appsettings.Production.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseAddress": "https://localhost:7030"
-
+  "BaseAddress": "https://order.boostjuice.com.vn:446",
+  "CurrentDomain": "https://order.boostjuice.com.vn/",
+  "MetaImage": "https://order.boostjuice.com.vn/images/boost-juice-logo.png"
 }
