--- a/BJ.App/appsettings.json
+++ b/BJ.App/appsettings.json
@@ -7,6 +7,6 @@
   },
   "DefaultLanguageId": "vi",
   "AllowedHosts": "*",
-  "BaseAddress": "https://localhost:7030"
-
+  "BaseAddress": "https://localhost:7030",
+  "CurrentDomain": "https://order.boostjuice.com.vn/"
 }
