--- a/BJ.Api/appsettings.Production.json
+++ b/BJ.Api/appsettings.Production.json
@@ -15,10 +15,22 @@
     "Size": "S"
   },
   "PageSize": {
-    "Product": 1,
-    "Category": 1,
-    "SubCategory": 1,
-    "Size": 1
+    "Product": 5,
+    "Category": 3,
+    "SubCategory": 3,
+    "Size": 5,
+    "Account": 1,
+    "Blog": 5,
+    "News": 5
+  },
+  "EmailConfiguration": {
+    "From": "khoa.tran@vanxuanfmcg.com.vn",
+    "To": "khoa.tran@vanxuanfmcg.com.vn",
+    "Title": "Phản hồi Boost Juice",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "testtran123@gmail.com",
+    "Password": "lxapvmvxnqokylqp"
   },
   "AllowedHosts": "*"
 }
