--- a/BJ.App/appsettings.Production.json
+++ b/BJ.App/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseAddress": "https://order.boostjuice.com.vn:446",
-  "CurrentDomain": "https://order.boostjuice.com.vn/",
-  "MetaImage": "https://order.boostjuice.com.vn/images/boost-juice-logo.png"
+  "BaseAddress": "https://boostjuice.vn:446",
+  "CurrentDomain": "https://boostjuice.vn/",
+  "MetaImage": "https://boostjuice.vn/images/boost-juice-logo.png"
 }
