--- a/BJ.App/appsettings.json
+++ b/BJ.App/appsettings.json
@@ -8,11 +8,11 @@
   "DefaultLanguageId": "vi",
   "AllowedHosts": "*",
   "BaseAddress": "https://localhost:7030",
-  "CurrentDomain": "https://order.boostjuice.com.vn/",
+  "CurrentDomain": "https://boostjuice.vn/",
   "GoogleAnalytics": "G-7CH690S69Y",
   "GoogleTagManager": "GTM-N6Q42TQ",
   "Template": {
-    "Winter": "ON" /*cHUYỂN SANG OFF ĐỂ TẮT HIỆU ỨNG*/
+    "Winter": "OFF" /*cHUYỂN SANG OFF ĐỂ TẮT HIỆU ỨNG*/
   },
   "Facebook": {
     "AppId": "1465544450736878",
